--- a/src/about.html
+++ b/src/about.html
@@ -6,21 +6,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="custom.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <script src="include.js"></script>
 
 </head>
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Lost & Found</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="add.html">Submit a lost/found item</a></li>
-            <li><a href = "lost.html"> View lost items</a></li>
-            <li><a href = "found.html"> View found items</a></li>
-        </ul>
-    </div>
-</nav>
+<div w3-include-html="header.html"></div>
 <div class="static-content">
 <h4>Are you tired of all-school emails?</h4>
 <p>Well then you've come to the right place. I hated getting three whole lost & found item emails a week! I was tired of not having a project! So I made this little web app where anyone can submit a lost or found item and <i> not </i> email the whole school about it!</p>
@@ -28,6 +18,6 @@
 <p>This simple web app was written by Ezra Newman.</p>
 <p>Love it? Hate it? Email me at: <b> 21enewman [at] athenian [dot] org</b></p>
 </div>
-
+<script>includeHTML()</script>
 </body>
 </html>
