--- a/src/addgui.html
+++ b/src/addgui.html
@@ -8,20 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     <script src="apiHandler.js"></script>
+    <script src="include.js"></script>
 </head>
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Lost & Found</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="submit.html">Submit a lost/found item</a></li>
-            <li><a href="lost.html"> View lost items</a></li>
-            <li><a href="found.html"> View found items</a></li>
-        </ul>
-    </div>
-</nav>
+<div w3-include-html="header.html"></div>
 <div class="static-content">
     <div class="row">
         <form class="col s12">
@@ -51,5 +41,6 @@
         </form>
     </div>
 </div>
+<script>includeHTML()</script>
 </body>
 </html>
