--- a/src/found.html
+++ b/src/found.html
@@ -7,21 +7,11 @@
     <link rel="stylesheet" href="custom.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-    <script src="http://localhost:63342/lostfound/src/apiHandler.js"></script>
+    <script src="apiHandler.js"></script>
+    <script src="include.js"></script>
 </head>
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Lost & Found</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="submit.html">Submit a lost/found item</a></li>
-            <li><a href="lost.html"> View lost items</a></li>
-            <li><a href="found.html"> View found items</a></li>
-        </ul>
-    </div>
-</nav>
+<div w3-include-html="header.html"></div>
 <div class="static-content">
     <h4>Things that people have found & thoughtfully posted here.</h4>
     <br><br>
@@ -48,7 +38,6 @@
     <script>readFirebase()</script>
 </div>
 
-</div>
-
+<script>includeHTML()</script>
 </body>
 </html>
