--- a/src/template.html
+++ b/src/template.html
@@ -6,24 +6,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="custom.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-
+    <script src="include.js"></script>
 </head>
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Lost & Found</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="submit.html">Submit a lost/found item</a></li>
-            <li><a href = "lost.html"> View lost items</a></li>
-            <li><a href = "found.html"> View found items</a></li>
-        </ul>
-    </div>
-</nav>
+<div w3-include-html="header.html"></div>
 <div class="static-content">
-
+    <p>some test content</p>
 </div>
-
+<script>includeHTML()</script>
 </body>
 </html>
