fix header links

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script>
-        window.location.href = "found.html";
+        window.location.href = "lostfound.html";
     </script>
 </head>
 <body>
