--- a/src/add.html
+++ b/src/add.html
@@ -26,7 +26,7 @@
                         <input type="file" accept="image/*" id="file">
                     </div>
                     <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
+                        <input class="file-path validate" type="text" id="path">
                     </div>
                 </div>
             </div>
@@ -47,10 +47,21 @@
                     </label>
                 </div>
             </div>
-            <button class="btn waves-effect waves-light" onclick="writeItemData(upload(document.getElementById('file').files[0]), document.getElementById('title').value, document.getElementById('description').value, document.getElementById('isLost').checked)">Submit</button>
+            <button class="btn waves-effect waves-light"
+                    onclick="writeItemData(upload(document.getElementById('file').files[0]), document.getElementById('title').value, document.getElementById('description').value, document.getElementById('isLost').checked)">
+                Submit
+            </button>
         </form>
     </div>
 </div>
 <script>includeHTML()</script>
+<script>
+    document.getElementById('file').addEventListener('change', showFileName);
+
+    function showFileName() {
+        let path = document.getElementById('file').files[0].name;
+        document.getElementById('path').value = path.replace(/[^0-9a-z-A-Z\.]/g, ""); //replace call included to help potentially mitigate xxs
+    }
+</script>
 </body>
 </html>
