added JS folder

--- a/src/add.html
+++ b/src/add.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="custom.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-    <script src="apiHandler.js"></script>
-    <script src="include.js"></script>
+    <script src="js/apiHandler.js"></script>
+    <script src="js/include.js"></script>
 </head>
 <body>
 <div w3-include-html="header.html"></div>
